syntax = "proto3";
package nodes;

option go_package = "github.com/snple/kokomi/pb/nodes;nodes";

import "generic_message.proto";

message DataUploadRequest {
    string id = 1;
    int32 content_type = 2;
    bytes content = 3;
    // string device_id = 4;
    bool realtime = 5;
    bool save = 6;
}

message DataUploadResponse {
    string id = 1;
    string message = 2;
}

message DataQueryRequest {
    string flux = 1;
    map<string, string> vars = 2;
}

message DataQueryByIdRequest {
    string id = 1;
    map<string, string> vars = 2;
}

service DataService {
    rpc Upload(DataUploadRequest) returns (DataUploadResponse) {}
    rpc Compile(DataQueryRequest) returns (pb.Message) {}
    rpc Query(DataQueryRequest) returns (stream pb.Message) {}
    rpc QueryById(DataQueryByIdRequest) returns (stream pb.Message) {}
}
